--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ scipy==1.4.1              # via seaborn
 seaborn==0.10.1
 six==1.15.0               # via cycler, python-dateutil
 cxroots==1.1.10
+sympy==1.7.1
